--- a/src/components/Dashboard.module.css
+++ b/src/components/Dashboard.module.css
@@ -2,7 +2,7 @@ body {
     background-color: #F7F8F8;
 }
 
-.DashbordContainer {
+.DashboardContainer {
     margin: auto;
     width: 1140px;
     display: flex;
@@ -74,7 +74,7 @@ body {
     font-size: 16px;
 }
 
-.DashbordLogoContainer {
+.DashboardLogoContainer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -83,25 +83,25 @@ body {
     margin-top: 35PX;
 }
 
-.DashbordLogoDiv {
+.DashboardLogoDiv {
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 
-.DashbordLogoDiv img {
+.DashboardLogoDiv img {
     width: 30px;
     height: 30px;
     margin-right: 15px;
 }
 
-.DashbordLogoDiv span {
+.DashboardLogoDiv span {
     font-family: 'Times New Roman', Times, serif;
     font-weight: 400;
     font-size: 24px;
 }
 
-.DashbordLogoContainer button {
+.DashboardLogoContainer button {
     width: 132px;
     height: 45px;
     border: none;
@@ -111,7 +111,7 @@ body {
     color: #FFFFFF;
 }
 
-.DashbordProductDiv {
+.DashboardProductDiv {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -122,7 +122,7 @@ body {
     margin-top: 25px;
 }
 
-.DashbordSpanDiv {
+.DashboardSpanDiv {
     display: flex;
     /* justify-content: flex-start; */
     flex-direction: row;
@@ -134,7 +134,7 @@ body {
     height: 70px;
 }
 
-.DashbordSpanDiv span:last-child {
+.DashboardSpanDiv span:last-child {
     margin-right: 170px;
 }
 
